# Electronic_corrector

./: README.md
backend/: .gitignore  Dockerfile  add_gost_statuses.py  document_check_report.json  gost_rules_api.json  pyproject.toml  s1.patch  test_manual_checker.py
backend/migration/versions/: 009e0203f2b5_.py  1cbbecfe42a9_.py  31acd4db1825_.py  67fc630015da_.py  762ca29551c6_.py  7eae78c62426_change_score_to_integer.py  a09a0b727e23_.py  e19694ff5d1d_.py  fac14221b08c_.py
backend/src/: main.py  start.sh
backend/src/project/api/: auth_routes.py  check_routes.py  depends.py  document_routes.py  gost_check_routes.py  mistake_routes.py  mistake_type_routes.py  perk_routes.py  report_routes.py  review_routes.py  standard_routes.py  status_routes.py  user.py  user_routes.py
backend/src/project/core/: exceptions.py  gost_service.py
backend/src/project/gost_checker/: __init__.py  checker.py  manual_rules.json  models.py  parser.py  pdf_report.py  rule_checker.py  test_checker.py  utils.py
backend/src/project/infrastructure/postgres/: database.py  models.py  session.py
backend/src/project/infrastructure/postgres/repository/: check_repo.py  document_repository.py  gost_check_repo.py  mistake_repo.py  mistake_type_repo.py  report_repo.py  (+4 more)
backend/src/project/resource/: gost_checker.py
backend/src/project/resourse/: auth.py
backend/src/project/schemas/: auth.py  check.py  documents.py  gost_check.py  mistake.py  mistake_type.py  reports.py  review.py  standart.py  status.py  user.py
backend/src/project/services/: report_generator.py  telegram.py
(+70 files in other folders)
